--- a/cccs-build/superset/Dockerfile
+++ b/cccs-build/superset/Dockerfile
@@ -1,7 +1,7 @@
 # Vault CA container import
 ARG VAULT_CA_CONTAINER=uchimera.azurecr.io/cccs/hogwarts/vault-ca:master_2921_22315d60
 FROM $VAULT_CA_CONTAINER AS vault_ca
-FROM uchimera.azurecr.io/cccs/superset-base:CLDN-1928-filter-incorrectly-displays-as-applied_20230203161428_b6147
+FROM uchimera.azurecr.io/cccs/superset-base:cccs-2.0_20230117193544_b6002
 
 
 
