--- a/superset-frontend/package.json
+++ b/superset-frontend/package.json
@@ -73,8 +73,6 @@
     "last 3 edge versions"
   ],
   "dependencies": {
-    "@ag-grid-community/react": "^26.0.0",
-    "@ag-grid-enterprise/all-modules": "^26.0.0",
     "@ant-design/icons": "^4.2.2",
     "@babel/runtime-corejs3": "^7.12.5",
     "@data-ui/sparkline": "^0.0.84",
@@ -115,6 +113,9 @@
     "@vx/responsive": "^0.0.195",
     "abortcontroller-polyfill": "^1.1.9",
     "ace-builds": "^1.4.14",
+    "ag-grid-community": "^29.1.0",
+    "ag-grid-enterprise": "^29.1.0",
+    "ag-grid-react": "^29.1.0",
     "antd": "^4.9.4",
     "array-move": "^2.2.1",
     "babel-plugin-typescript-to-proptypes": "^2.0.0",
@@ -208,8 +209,6 @@
   },
   "devDependencies": {
     "@applitools/eyes-storybook": "^3.27.6",
-    "@ag-grid-community/react": "^26.0.0",
-    "@ag-grid-enterprise/all-modules": "^26.0.0",
     "@babel/cli": "^7.16.0",
     "@babel/compat-data": "^7.15.0",
     "@babel/core": "^7.15.5",
@@ -271,6 +270,8 @@
     "@types/yargs": "12 - 15",
     "@typescript-eslint/eslint-plugin": "^5.3.0",
     "@typescript-eslint/parser": "^5.3.0",
+    "ag-grid-community": "^29.1.0",
+    "ag-grid-enterprise": "^29.1.0",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "babel-plugin-dynamic-import-node": "^2.3.3",
