update base image

--- a/cccs-build/superset/Dockerfile
+++ b/cccs-build/superset/Dockerfile
@@ -1,7 +1,7 @@
 # Vault CA container import
 ARG VAULT_CA_CONTAINER=uchimera.azurecr.io/cccs/hogwarts/vault-ca:master_11376_a25c34e1
 FROM $VAULT_CA_CONTAINER AS vault_ca
-FROM uchimera.azurecr.io/cccs/superset-base:feature_update-cccs-main-to-2.1.0-add-cccs-2.0_20230425191536_b6649
+FROM uchimera.azurecr.io/cccs/superset-base:fix-date-column-bug-in-cccs-viz_20230503190201_b6720
 
 USER root
 
