--- a/cccs-build/superset/Dockerfile
+++ b/cccs-build/superset/Dockerfile
@@ -1,7 +1,7 @@
 # Vault CA container import
 ARG VAULT_CA_CONTAINER=uchimera.azurecr.io/cccs/hogwarts/vault-ca:master_11376_a25c34e1
 FROM $VAULT_CA_CONTAINER AS vault_ca
-FROM uchimera.azurecr.io/cccs/superset-base:Persist-column-ordering-on-Emit-Cross-Filters_20230605141335_b6968
+FROM uchimera.azurecr.io/cccs/superset-base:cccs-2.1_20230605182047_b6972
 
 USER root
 
