adding basic grid compnent

--- a/superset-frontend/package.json
+++ b/superset-frontend/package.json
@@ -77,8 +77,6 @@
     "last 3 edge versions"
   ],
   "dependencies": {
-    "@ag-grid-community/react": "^26.0.0",
-    "@ag-grid-enterprise/all-modules": "^26.0.0",
     "@ant-design/icons": "^4.8.0",
     "@babel/runtime-corejs3": "^7.12.5",
     "@data-ui/sparkline": "^0.0.84",
@@ -117,6 +115,13 @@
     "@superset-ui/preset-chart-xy": "file:./plugins/preset-chart-xy",
     "@superset-ui/switchboard": "file:./packages/superset-ui-switchboard",
     "@visx/responsive": "^3.0.0",
+    "ag-grid-react": "^30.0.0",
+    "ag-grid-enterprise": "^30.0.0",
+    "ag-grid-community": "^30.0.0",
+    "@ag-grid-enterprise/range-selection": "^30.0.0",
+    "@ag-grid-enterprise/row-grouping": "^30.0.0",
+    "@ag-grid-enterprise/rich-select": "^30.0.0",
+    "@ag-grid-community/client-side-row-model": "^30.0.0",
     "abortcontroller-polyfill": "^1.1.9",
     "ace-builds": "^1.4.14",
     "antd": "4.10.3",
@@ -212,8 +217,6 @@
     "yargs": "^15.4.1"
   },
   "devDependencies": {
-    "@ag-grid-community/react": "^26.0.0",
-    "@ag-grid-enterprise/all-modules": "^26.0.0",
     "@applitools/eyes-storybook": "^3.30.1",
     "@babel/cli": "^7.18.10",
     "@babel/compat-data": "^7.18.8",
@@ -276,6 +279,13 @@
     "@types/yargs": "12 - 15",
     "@typescript-eslint/eslint-plugin": "^5.3.0",
     "@typescript-eslint/parser": "^5.3.0",
+    "ag-grid-react": "^30.0.0",
+    "ag-grid-enterprise": "^30.0.0",
+    "@ag-grid-enterprise/range-selection": "^30.0.0",
+    "@ag-grid-enterprise/row-grouping": "^30.0.0",
+    "@ag-grid-enterprise/rich-select": "^30.0.0",
+    "@ag-grid-community/client-side-row-model": "^30.0.0",
+    "ag-grid-community": "^30.0.0",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "babel-plugin-dynamic-import-node": "^2.3.3",
