--- a/superset-frontend/tsconfig.json
+++ b/superset-frontend/tsconfig.json
@@ -75,5 +75,5 @@
     "./plugins/*/types/**/*",
     "./packages/*/test/**/*",
     "./plugins/*/test/**/*"
-  ]
+, "../../plugin-chart-ag-grid"  ]
 }
